# SPDX-License-Identifier: MPL-2.0

[package]
name = "creeper-semver-pubgrub"
version = "0.2.0"
edition = "2024"
description = "Compatibility between VersionReq from semver and VersionSet from pubgrub"
readme = "README.md"
repository = "https://github.com/misaka10987/creeper-semver-pubgrub"
license = "MPL-2.0"
keywords = ["dependency", "pubgrub", "semver", "solver", "version"]
categories = ["algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
semver = "1.0.28"
pubgrub = "0.3.0"
serde = { version = "1.0.228", features = ["derive"], optional = true }
zerocopy = { version = "0.8.48", features = ["derive"] }

[features]
serde = ["dep:serde", "pubgrub/serde", "semver/serde"]
